--- a/style.css
+++ b/style.css
@@ -1,60 +1,41 @@
-$bgcolor: #ffa3b9;
-$transparent: rgba(255, 255, 255, 0);
+html,
+body {
+    margin          : 0;
+    padding         : 0;
+    font-family     : Arial, Helvetica, sans-serif;
+    background-color: #e35183;
+}
 
-$color-1: #f6afcc;
-$color-1-t: transparentize($color-1, 1);
-$color-2: #f398bd;
-$color-2-t: transparentize($color-2, 1);
+.container {
+    display        : flex;
+    position       : absolute;
+    width          : 100%;
+    height         : 100%;
+    flex-flow      : column nowrap;
+    align-items    : center;
+    justify-content: center;
+}
 
-$size: 4em;
-$big-size: $size*2;
-$min: $size*.3;
-$max: $size*.7;
+.container .title {
+    font-size: 35px;
+    color    : white;
+}
 
-HTML {
-  height: 100%;
-  }
-BODY {
-  background: 
-    linear-gradient(135deg,
-      $color-1 $min,
-      $color-1-t $min
-      ) 0 #{$size},
-    linear-gradient(-135deg,
-      $color-1 $min,
-      $color-1-t $min
-      ) 0 #{$size},
-    
-    radial-gradient(circle at #{$big-size - $min*.7} $size*1.85,
-      $color-1 $min*.85,
-      $color-1-t $min*.87
-      ) 0 -#{$size},
-    radial-gradient(circle at #{$min*.7} $size*1.85,
-      $color-1 $min*.85,
-      $color-1-t $min*.87
-      ) 0 -#{$size},
+.container .buttons {
+    margin-top : 50px;
+    margin-left: -130px;
+}
 
+.container .buttons .btn {
+    position        : absolute;
+    padding         : 10px 20px;
+    font-size       : 18px;
+    background-color: #7f0000;
+    color           : white;
+    border          : none;
+    border-radius   : 3px;
+}
 
-    linear-gradient(135deg,
-      $color-2 $min,
-      $color-2-t $min
-      ) $size 0,
-    linear-gradient(-135deg,
-      $color-2 $min,
-      $color-2-t $min
-      ) $size 0,
-    
-    radial-gradient(circle at #{$big-size - $min*.7} $size*1.85,
-      $color-2 $min*.85,
-      $color-2-t $min*.87
-      ) $size 0,
-    radial-gradient(circle at #{$min*.7} $size*1.85,
-      $color-2 $min*.85,
-      $color-2-t $min*.87
-      ) $size 0
-    ;
-  background-size:  $big-size $big-size;
-  background-color: $bgcolor;
-  background-repeat: repeat;
-  font: 16px/2 'Trebuchet MS', Verdana, sans-serif;
-  }
+.container .buttons>#btnno {
+    margin-left: 70px;
+}
