--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     margin          : 0;
     padding         : 0;
     font-family     : Arial, Helvetica, sans-serif;
-    background-color: #e35183;
+    background-image: url("https://preview.pixlr.com/images/800wm/1205/1/12051217778.jpg”);
 }
 
 .container {
